--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "get-doc",
   "version": "1.0.1",
-  "description": "Get document, if has DOM.",
+  "description": "Get document, if there’s DOM.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
