--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "get-document"
   ],
   "author": "Deema Ywanov",
-  "license": "Unlicensed",
+  "license": "Unlicense",
   "bugs": {
     "url": "https://github.com/dfcreative/get-doc/issues"
   },
